# ShapeFileAndCensusDataParsing

./: Cargo.toml  datasets.txt
data/census_data/: accomodation_type_london.csv
data/download/: PopulationAndDensityPerEnglandOutputArea(144)-all_columns.csv  PopulationAndDensityPerEnglandOutputArea(144).csv
report/: project.tex
src/: census_file_name_parse.rs  main.rs  nomis_download.rs  parsing_error.rs  population_and_density_per_output_area.rs  shape_file.rs
