[package]
name = "ShapeFileParsing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = { version = "0.3.0", features = ["geo-types"] }
plotters = "0.3.1"
geo-types = "0.7.2"
geo = "0.18.0"
polylabel = "2.4"
num-traits = "0.2"