[package]
name = "ShapeFileParsing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shapefile = { version = "0.3.0", features = ["geo-types"] }
plotters = "0.3.1"
geo-types = "0.7.2"
geo = "0.18.0"
polylabel = "2.4"
num-traits = "0.2"
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1.6"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.68"
enum-map = "1.1.1"
log = "0.4.14"